# exercicios-estruturaDeDados

./: .gitignore  a01.cpp  a02.cpp  a03.cpp  a04.cpp  main.cpp  readme.md
aula03/: teste.cpp
aula04/: app.cpp  lista_simples.h
aula05/: app.cpp  g3.h
aula07/: atividade4.cpp
aula07/raylib/: app  app.cpp
aula07/raylib/lib/pkgconfig/: raylib.pc
aula08/: app.cpp
aula09/: app.cpp
aula1/: a05.cpp
aula10/: exemplo.cpp
aula11/: app.cpp
aula12/: app.cpp
aula2/: app.cpp  ponto.cpp  ponto.h
aula4/: lista_simples.cpp
aula5/: app  g3.cpp
aula7/: atividade3.cpp
aula8/: app.cpp
output/: a01  a02  a03  a04  a05  main
revisoes/: ex01.cpp
revisoes/M1-PROVA-REVISAO/lista-simples/: app.cpp
revisoes/hashtable/: app.cpp
revisoes/linkedlist/: ex01.cpp
trabalhos/M1-Complexidade/: algoritmos.cpp
trabalhos/M1-LogisticaEstelar/: CMakeLists.txt  TAD_Camera.cpp  TAD_Camera.h  TAD_Carga.cpp  TAD_Carga.h  TAD_Hangar.cpp  TAD_Hangar.h  TAD_Log.cpp  TAD_Log.h  TAD_Nave.cpp  TAD_Nave.h  TAD_Sensor.cpp  TAD_Sensor.h  app.cpp
trabalhos/M1-T1-Tad/: testa_vetor.cpp  vetor.cpp  vetor.h
trabalhos/M1-T2-ListasLineares/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
trabalhos/M1-T3-LinkedList/: app  app.cpp  lista_simples.cpp  lista_simples.h
trabalhos/tad/: testa_vetor
